src/abacus-kubernetes/abacus/abacus-backoffice.yaml
apiVersion: v1
kind: Service
metadata:
  name: abacus-backoffice-service
spec:
  type: ClusterIP
  selector:
    app: abacus-backoffice
  ports:
    # TODO: https (443)
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abacus-backoffice-deployment
  labels:
    app: abacus-backoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abacus-backoffice
  template:
    metadata:
      labels:
        app: abacus-backoffice
    spec:
      containers:
        - name: abacus-backoffice
          image: adeira/abacus-backoffice
          resources:
            # TODO: limits
            requests:
              cpu: 16m
              memory: 128Mi
          ports:
            - containerPort: 5001
