src/abacus-kubernetes/abacus/abacus-kochka.yaml
apiVersion: v1
kind: Service
metadata:
  name: abacus-kochka-service
spec:
  type: ClusterIP
  selector:
    app: abacus-kochka
  ports:
    # TODO: https (443)
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abacus-kochka-deployment
  labels:
    app: abacus-kochka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abacus-kochka
  template:
    metadata:
      labels:
        app: abacus-kochka
    spec:
      containers:
        # TODO: resources.requests, resources.limits
        - name: abacus-kochka
          image: adeira/abacus-kochka
          ports:
            - containerPort: 5002
