src/abacus-kubernetes/abacus/mrtnzlml-meta.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrtnzlml-meta-service
spec:
  type: ClusterIP
  selector:
    app: mrtnzlml-meta
  ports:
    # TODO: https (443)
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrtnzlml-meta-deployment
  labels:
    app: mrtnzlml-meta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mrtnzlml-meta
  template:
    metadata:
      labels:
        app: mrtnzlml-meta
    spec:
      containers:
        - name: mrtnzlml-meta
          image: adeira/mrtnzlml-meta
          resources:
            requests:
              cpu: 16m
              memory: 128Mi
            limits:
              cpu: 32m
              memory: 256Mi
          ports:
            - containerPort: 3000
